--- a/site/views/home.ejs
+++ b/site/views/home.ejs
@@ -12,6 +12,7 @@
     <ul>
       <a href="/numbers">Numbers</a>
       <a href="/weather">Weather</a>
+      <a href="/sql">MySQL</a>
     </ul>
   </body>
 </html>
