--- a/site/views/mysql/hero.ejs
+++ b/site/views/mysql/hero.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/static/styles.css" />
-    <style>
+    <link rel="stylesheet" href="/css/mysql.css" />
+    <!-- <style>
       * {
         font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
           Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
@@ -48,47 +48,31 @@
         display: flex;
         background-color: red;
       }
-    </style>
-    <title>Document</title>
+    </style> -->
+    <title>Heros</title>
   </head>
   <body>
-    <h1><%= stats[0].c_name %></h1>
+    <h1><%= stats['c_name'] %></h1>
     <div id="root">
       <ul>
-        <li>WIT: <strong><%= stats[0]['c_wit'] %></strong></li>
-        <li>STRENGTH: <strong><%= stats[0]['c_strength'] %></strong></li>
-        <li>ATTACK: <strong><%= stats[0]['c_attack'] %></strong></li>
-        <li>DEFENSE: <strong><%= stats[0]['c_defense'] %></strong></li>
-        <li>MAGIC: <strong><%= stats[0]['c_magic'] %></strong></li>
+        <li>WIT: <strong><%= stats['c_wit'] %></strong></li>
+        <li>STRENGTH: <strong><%= stats['c_strength'] %></strong></li>
+        <li>ATTACK: <strong><%= stats['c_attack'] %></strong></li>
+        <li>DEFENSE: <strong><%= stats['c_defense'] %></strong></li>
+        <li>MAGIC: <strong><%= stats['c_magic'] %></strong></li>
         <br />
       </ul>
-      <form action="/update">
-        <ul>
-          <li>
-            <label for="wit_u">Update wit: </label>
-            <input type="number" id="wit_u" />
-          </li>
-          <li>
-            <label for="strength_u">Update strength: </label>
-            <input type="number" id="strength_u" />
-          </li>
-          <li>
-            <label for="attack_u">Update attack: </label>
-            <input type="number" id="attack_u" />
-          </li>
-          <li>
-            <label for="defense_u">Update defense: </label>
-            <input type="number" id="defense_u" />
-          </li>
-          <li>
-            <label for="magic_u">Update magic: </label>
-            <input type="number" id="magic_u" />
-          </li>
-        </ul>
+
+      <form action="/sql/heros/update_hero" method="POST">
+        <input type="text" name="hero_id" value="<%= stats['c_id'] %>" hidden />
+        <input type="number" name="wit_u" />
+        <input type="number" name="strength_u" />
+        <input type="number" name="attack_u" />
+        <input type="number" name="defense_u" />
+        <input type="number" name="magic_u" />
         <input type="submit" />
       </form>
-      <br />
     </div>
-    <a href="/">BACK</a>
+    <a href="/sql">BACK</a>
   </body>
 </html>
