--- a/site/static/css/wordle.css
+++ b/site/static/css/wordle.css
@@ -5,19 +5,63 @@
 }
 
 #root {
+  height: 100vh;
   display: flex;
+  flex-direction: row;
+}
+
+#guess {
+  width: 30%;
+  margin: auto;
+  align-items: center;
+}
+
+#title {
+  text-align: center;
+}
+
+#words {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin: auto;
+}
+
+#grid {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  margin: auto;
+}
+
+.input {
+  display: flex;
+  flex-direction: rows;
+}
+
+.color-controls {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+}
+
+input[type="radio"] {
+  margin-left: 0.5rem;
 }
 
 input[type="text"] {
-  width: 3rem;
+  width: 6rem;
   height: 6rem;
-  font-size: 84px;
+  font-size: 78px;
   color: lightgray;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-weight: 900;
+  text-align: center;
+  margin-left: 0.5rem;
+  border-radius: 0.5rem;
+  border: 0.1rem solid black;
 }
 
-div {
-  margin: 1rem;
-}
+
