--- a/site/views/home.ejs
+++ b/site/views/home.ejs
@@ -13,6 +13,7 @@
       <a href="/numbers">Numbers</a>
       <a href="/weather">Weather</a>
       <a href="/sql">MySQL</a>
+      <a href="/wordle">Wordle</a>
     </ul>
   </body>
 </html>
